tests/dag/type-conflict.fab
#
# RUN: %fab --format=null %s 2> %t.err || true
# RUN: FileCheck %s -input-file %t.err
#

# CHECK: {{/.*}}.fab:{{[0-9:]+}}: error: expected string, got int
foo:string = 42;
